// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Component Should match snapshot with bottomDisplay false 1`] = `
.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  border: solid 1px rgba(107,108,128,0.8);
  border-radius: 3px;
  background-color: rgba(21,23,38,0.9);
  padding: 18px;
}

.emotion-4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  border: solid 1px rgba(107,108,128,0.8);
  border-right: none;
  border-bottom: none;
  border-radius: 3px;
  background-color: rgba(21,23,38,0.9);
  height: 10px;
  width: 10px;
  -webkit-transform: translate(0%,50%) rotate(45deg);
  -ms-transform: translate(0%,50%) rotate(45deg);
  transform: translate(0%,50%) rotate(45deg);
}

<Dropdown
  bottomDisplay={false}
>
  <Styled(div)>
    <div
      className="emotion-6 emotion-7"
    >
      <Styled(div)
        bottomDisplay={false}
      >
        <div
          className="emotion-4 emotion-5"
        >
          <Styled(div)
            bottomDisplay={false}
          >
            <div
              className="emotion-0 emotion-1"
            />
          </Styled(div)>
          <Styled(div)>
            <div
              className="emotion-2 emotion-3"
            >
              <Child>
                <div />
              </Child>
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </Styled(div)>
</Dropdown>
`;

exports[`Dropdown Component Should match snapshot with bottomDisplay true 1`] = `
.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  bottom: 100%;
}

.emotion-0 {
  border: solid 1px rgba(107,108,128,0.8);
  border-left: none;
  border-top: none;
  border-radius: 3px;
  background-color: rgba(21,23,38,0.9);
  height: 10px;
  width: 10px;
  -webkit-transform: translate(0%,-50%) rotate(45deg);
  -ms-transform: translate(0%,-50%) rotate(45deg);
  transform: translate(0%,-50%) rotate(45deg);
}

.emotion-2 {
  border: solid 1px rgba(107,108,128,0.8);
  border-radius: 3px;
  background-color: rgba(21,23,38,0.9);
  padding: 18px;
}

<Dropdown
  bottomDisplay={true}
>
  <Styled(div)>
    <div
      className="emotion-6 emotion-7"
    >
      <Styled(div)
        bottomDisplay={true}
      >
        <div
          className="emotion-4 emotion-5"
        >
          <Styled(div)
            bottomDisplay={true}
          >
            <div
              className="emotion-0 emotion-1"
            />
          </Styled(div)>
          <Styled(div)>
            <div
              className="emotion-2 emotion-3"
            >
              <Child>
                <div />
              </Child>
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </Styled(div)>
</Dropdown>
`;
